# bevy_out_of_process_editor_experiments

./: Cargo.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
editor/: Cargo.toml
editor-api/: Cargo.toml
editor-api/src/: ipc.rs  lib.rs  server_side.rs
editor/src/: main.rs
editor_common/: Cargo.toml
editor_common/src/: external_texture.rs  lib.rs
editor_integration/: Cargo.toml
editor_integration/src/: lib.rs
game/: Cargo.toml
game/src/: feathers.rs  main.rs  utils.rs
