# [package]
# name = "bevy-editor-experiments"
# version = "0.1.0"
# edition = "2024"

[workspace]
members = ["editor", "editor_common", "editor_integration", "game"]
resolver = "3"

[workspace.dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "15540493a688e162e56b4ad19b6055fc35e109aa" }
bevy = "=0.19.0-rc.1"
