[package]
name = "editor-api"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
bevy = { workspace = true, features = ["dev", "bevy_remote", "bevy_feathers"] }
ipc-channel = "0.22.0"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = "1.0.228"
serde_json = "1.0.149"
