[package]
name = "editor_integration"
version = "0.1.0"
edition = "2024"

[dependencies]
editor_common = {path = "../editor_common"}
ash = "0.38.0"
bevy = { workspace = true, features = ["dev", "bevy_remote", "bevy_feathers"] }
ipc-channel = "0.22.0"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = "0.10.1"
rustix = "1.1.4"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
wgpu = "29.0.3"
